--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="./POH_GGJ26.html"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -39,7 +39,7 @@ progressive_web_app/display=1
 progressive_web_app/orientation=0
 progressive_web_app/icon_144x144=""
 progressive_web_app/icon_180x180=""
-progressive_web_app/icon_512x512=""
+progressive_web_app/icon_512x512="uid://hsyge1kupgkb"
 progressive_web_app/background_color=Color(0, 0, 0, 1)
 threads/emscripten_pool_size=8
 threads/godot_pool_size=4
@@ -55,7 +55,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="./POH_GGJ26.dmg"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -71,9 +71,9 @@ binary_format/architecture="universal"
 custom_template/debug=""
 custom_template/release=""
 debug/export_console_wrapper=1
-application/icon=""
+application/icon="uid://hsyge1kupgkb"
 application/icon_interpolation=4
-application/bundle_identifier=""
+application/bundle_identifier="com.hugh.pieces"
 application/signature=""
 application/app_category="Games"
 application/short_version=""
